creat a nav and complete with responsive

--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class= "container">
         <div class="responsive-menu">
-
+          <a href="#"><i class="fa-solid fa-bars"></i></a>
         </div>
-        <h3 class="nav-title"></h3>
+        <h3 class="nav-title">Influencer products</h3>
         <ul>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <div class="nav-menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Sign up</a></li>
+          <li><a href="#">Log In</a></li>
+          <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+          </div>
+          <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></i></a></li>
         </ul>
       </nav>
     </header>
