creat sposors section and complete it with responsive

--- a/index.html
+++ b/index.html
@@ -31,9 +31,42 @@
           <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></i></a></li>
         </ul>
       </nav>
+
+      <div class="header-banner container">
+        <div class="banner-left">
+          <h1 class="banner-title">Start your Journey as 
+            Influencer</h1>
+          <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+
+          <div class="banner-button">
+            <button>Preebook now</button><img src="icon/arrow-forward 1.svg" alt="">
+          </div>
+          
+        </div>
+        <div class="banner-right">
+          <img src="images/main-camera.png" alt="a camera picture">
+        </div>
+      </div>
     </header>
 
-    <main></main>
+    <main>
+
+      <!-- -----------sponsor section------------ -->
+      <section>
+        <div class="line-top container"></div>
+        <div class="sponsors-container container">
+          <a href="#"><img src="logos/Alibaba.svg" alt="Alibaba logo"></a>
+          <a href="#"><img src="logos/Amazon.svg" alt="Amazon logo"></a>
+          <a href="#"><img src="logos/Daraz.pk Logo.svg" alt="Daraz logo"></a>
+          <a href="#"><img src="logos/Ebay.svg" alt="Ebay logo"></a>
+          <a href="#"><img src="logos/Rakuten.svg" alt="Rakuten logo"></a>
+          <a href="#"><img src="logos/Walmart.svg" alt="Walmart logo"></a>
+          <a href="#"><img src="logos/Target.svg" alt="Target logo"></a>
+        </div>
+        <div class="line-bottom"></div>
+      </section>
+
+    </main>
 
     <footer></footer>
   </body>
