complete the website with responsive

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             Influencer</h1>
           <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
 
-          <div class="banner-button">
+          <div class="button">
             <button>Preebook now</button><img src="icon/arrow-forward 1.svg" alt="">
           </div>
           
@@ -66,8 +66,190 @@
         <div class="line-bottom"></div>
       </section>
 
+
+      <!-- ---------item-card section--------- -->
+
+      <section>
+        <h2 class="item-prising-card-container-title">Popular Collection</h2>
+        <div class="item-prising-card-container container">
+          <div class="card">
+            <img src="images/tripod.png" alt="tripod picture" class="item-picture">
+            <h3 class="item-title">Flex Tripod</h3>
+            <h4 class="item-prise">$50.48</h4>
+            <div class="item-rating-container">
+              <div class="item-rating-star-container">
+                <img src="Rating Stars/full star.png" alt="">
+                <img src="Rating Stars/full star.png" alt="">
+                <img src="Rating Stars/full star.png" alt="">
+                <img src="Rating Stars/full star.png" alt="">
+                <img src="Rating Stars/half star.png" alt="">
+                <p class="item-rating-counter">4.99</p>
+              </div>
+            </div>
+            <p class="item-description">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+
+          <div class="card">
+            <img src="images/mic.png" alt="airpot picture" class="item-picture">
+            <h3 class="item-title">microphone</h3>
+            <h4 class="item-prise">$120.25</h4>
+            <div class="item-rating-star-container">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/half star.png" alt="">
+              <p class="item-rating-counter">4.99</p>
+            </div>
+            <p class="item-description">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+
+          <div class="card">
+            <img src="images/airpod.png" alt="" class="item-picture">
+            <h3 class="item-title">Airbuds</h3>
+            <h4 class="item-prise">$100.00</h4>
+            <div class="item-rating-star-container">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/half star.png" alt="">
+              <p class="item-rating-counter">4.99</p>
+            </div>
+            <p class="item-description">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+
+          <div class="card">
+            <img src="images/drone.png" alt="" class="item-picture">
+            <h3 class="item-title">Drone</h3>
+            <h4 class="item-prise">$980.25</h4>
+            <div class="item-rating-star-container">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/half star.png" alt="">
+              <p class="item-rating-counter">4.99</p>
+            </div>
+            <p class="item-description">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+
+          <div class="card">
+            <img src="images/lights.png" alt="" class="item-picture">
+            <h3 class="item-title">Light Setup</h3>
+            <h4 class="item-prise">$1200.00</h4>
+            <div class="item-rating-star-container">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/half star.png" alt="">
+              <p class="item-rating-counter">4.99</p>
+            </div>
+            <p class="item-description">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+
+          <div class="card">
+            <img src="images/setup.png" alt="" class="item-picture">
+            <h3 class="item-title">Photoshoot set</h3>
+            <h4 class="item-prise">$820.40</h4>
+            <div class="item-rating-star-container">
+              <img src="Rating Stars/full star.png" src alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/half star.png" alt="">
+              <p class="item-rating-counter">4.99</p>
+            </div>
+            <p class="item-description">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+
+          <div class="card">
+            <img src="images/camera.png" alt="" class="item-picture">
+            <h3 class="item-title">Vlogging Camera</h3>
+            <h4 class="item-prise">$1800.80</h4>
+            <div class="item-rating-star-container">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/half star.png" alt="">
+              <p class="item-rating-counter">4.99</p>
+            </div>
+            <p class="item-description">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+
+          <div class="card">
+            <img src="images/single-light.png" alt="" class="item-picture">
+            <h3 class="item-title">Green Screen</h3>
+            <h4 class="item-prise">$25.48</h4>
+            <div class="item-rating-star-container">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/half star.png" alt="">
+              <p class="item-rating-counter">4.99</p>
+            </div>
+            <p class="item-description">Wordwide shifting available
+              Buyers protection possible!</p>
+          </div>
+
+          <div class="card">
+            <img src="images/action.png" alt="action camera picture" class="item-picture">
+            <h3 class="item-title">Action Camera</h3>
+            <h4 class="item-prise">$380.00</h4>
+            <div class="item-rating-star-container">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/full star.png" alt="">
+              <img src="Rating Stars/half star.png" alt="">
+              <p class="item-rating-counter">4.99</p>
+            </div>
+            <p class="item-description">Wordwide shifting available Buyers protection possible!</p>
+          </div>
+        </div>
+        <div class="see-more-link container">
+          <a href="#">See more</a> <img src="icon/Group.png" alt="">
+        </div>
+      </section>
+
+      <section>
+        <div class="featured-section container">
+          <div class="featured-section-left">
+            <img src="images/gear.png" alt="">
+          </div>
+          <div class="featured-section-right">
+              <h2 class="featured-section-title">Featured products at one place</h2>
+              <p class="featured-section-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+              <div class="button">
+                <button>Preebook now</button><img src="icon/arrow-forward 1.svg" alt="">
+              </div>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer container">
+        <h2 class="footer-title">Influencer products</h2>
+        <p class="footer-description">Copyright © 2020  influencer products</p>
+        <p class="footer-description">All rights reserved</p>
+        <div class="social-link">
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-dribbble"></i></a>
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""><i class="fa-brands fa-youtube"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
